// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test RoundedIcon component should render correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RoundedIcon
    icon="facebook"
    onClickHandler={[MockFunction]}
    size="medium"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="icon icon icon-facebook"
        style={
          Object {
            "fontSize": undefined,
          }
        }
      />,
      "className": "roundedIcon medium",
      "onClick": [Function],
      "style": Object {
        "background": undefined,
        "color": undefined,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "className": "icon icon icon-facebook",
        "style": Object {
          "fontSize": undefined,
        },
      },
      "ref": null,
      "rendered": null,
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="icon icon icon-facebook"
          style={
            Object {
              "fontSize": undefined,
            }
          }
        />,
        "className": "roundedIcon medium",
        "onClick": [Function],
        "style": Object {
          "background": undefined,
          "color": undefined,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "icon icon icon-facebook",
          "style": Object {
            "fontSize": undefined,
          },
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Test RoundedIcon component should render correctly 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RoundedIcon
    disabled={true}
    icon="facebook"
    onClickHandler={[MockFunction]}
    size="medium"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="icon icon icon-facebook"
        style={
          Object {
            "fontSize": undefined,
          }
        }
      />,
      "className": "disabled roundedIcon medium",
      "onClick": [Function],
      "style": Object {
        "background": undefined,
        "color": undefined,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "className": "icon icon icon-facebook",
        "style": Object {
          "fontSize": undefined,
        },
      },
      "ref": null,
      "rendered": null,
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="icon icon icon-facebook"
          style={
            Object {
              "fontSize": undefined,
            }
          }
        />,
        "className": "disabled roundedIcon medium",
        "onClick": [Function],
        "style": Object {
          "background": undefined,
          "color": undefined,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "icon icon icon-facebook",
          "style": Object {
            "fontSize": undefined,
          },
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
